<resources>
    <string name="app_name">Messaging App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="save">save</string>
    <string name="AppName">App Name Temp</string>
    <string name="welcome_to_secure_n_messaging_app">Welcome to Secure "\n" Messaging App</string>
    <string name="welcomescreen_terms">We would be happy to register you. You can register if you accept the Terms and Conditions.</string>
    <string name="accept_get_started"><![CDATA[Accept & Get Started]]></string>
    <string name="send_sms">SEND SMS</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet
        , consectetur adipiscing elit. Aliquam luctus augue
        vitae dui laoreet pulvinar</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="wrong_number">If you typed the number wrong click here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="status">Status</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="hey_i_m_using_this_app">Hey! I,m using this app</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="web">Web</string>
    <string name="temp">temp</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="w_e_l_c_o_m_e">W E L C O M E</string>
    <string name="welcome_verify_phone">We will send one time password to verify your phone number</string>
    <string name="phone_num">Enter your phone number</string>
    <string name="resend_code">Resend Code</string>
    <string name="registration_user">Add your username, status, and profile picture</string>
    <string name="find_nearby_users">Find nearby users</string>
</resources>