<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchuser"
        android:title="Search User"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        >
    </item>

    <item
        android:id="@+id/nearbyUsers"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/find_nearby_users"
        app:showAsAction="never"
        >
    </item>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="never"

        >
    </item>

    <item
        android:id="@+id/web"
        android:title="@string/web"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="never"
        >
    </item>
</menu>