<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    tools:context=".ui.main.view.activities.SplashScreen"
    android:forceDarkAllowed="false"
    tools:targetApi="q">

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="217dp"
        android:layout_height="190dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo_gif"
        app:layout_constraintBottom_toTopOf="@+id/SplashBottomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213"
        />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w_e_l_c_o_m_e"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SplashBottomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/SplashBottomText"
        android:layout_width="371dp"
        android:layout_height="119dp"
        android:layout_marginBottom="192dp"
        android:text="@string/welcomescreen_terms"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AcceptGetStarted"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@color/purple_700"
        android:text="@string/accept_get_started"
        android:textColor="@color/WHITE"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SplashBottomText"
        app:layout_constraintVertical_bias="0.386" />


</androidx.constraintlayout.widget.ConstraintLayout>